src/snapshots/transmute__parser__tests__struct_valid_zero_field.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { }\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "S",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId(0),
                kind: Struct(
                    Identifier {
                        id: IdentId(0),
                        span: 1:8; [7, 8],
                        bound: Unbound,
                    },
                    [],
                ),
                span: 1:1; [0, 12],
            },
        ],
        root: [
            StmtId(0),
        ],
        symbols: [],
        types: [],
        state: Raw,
    },
)
