src/snapshots/transmute__parser__tests__structs_as_root.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { } struct S { }\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "S",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId(0),
                kind: Struct(
                    Identifier {
                        id: IdentId(0),
                        span: 1:8; [7, 8],
                        bound: Unbound,
                    },
                    [],
                ),
                span: 1:1; [0, 12],
            },
            Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(0),
                        span: 1:21; [20, 21],
                        bound: Unbound,
                    },
                    [],
                ),
                span: 1:14; [13, 25],
            },
        ],
        root: [
            StmtId(0),
            StmtId(1),
        ],
        symbols: [],
        types: [],
        state: Raw,
    },
)
