src/snapshots/transmute__parser__tests__two_statements-dot.snap
---
source: src/parser.rs
expression: "Dot::new(&ast, &vec![]).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label="42"][shape="plaintext"][fontcolor="black"]
n1[label="let forty_two"][shape="plaintext"][fontcolor="black"]
n2[label="forty_two"][shape="plaintext"][fontcolor="blue"]
n1 -> n0[style="solid"][color="black"][arrowhead="none"]}
