src/snapshots/transmute__parser__tests__while_loop-dot.snap
---
source: src/parser.rs
expression: "Dot::new(&ast, &vec![]).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label="true"][shape="plaintext"][fontcolor="black"]
n1[label="42"][shape="plaintext"][fontcolor="black"]
n2[label="while"][shape="plaintext"][fontcolor="black"]
n2 -> n0[style="solid"][color="black"][arrowhead="none"]
n2 -> n1[style="solid"][color="black"][arrowhead="none"]}
